k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bankapp:v5
  namespace: bankapp:v5
  labels:
    app: bankapp:v5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bankapp:v5
  template:
    metadata:
      labels:
        app: bankapp:v5
    spec:
      containers:
      - name: bankapp:v5
        image: madhupdevops/bankapp:v5
        ports:
        - containerPort: 8080
